# optimization_pratice

./: README.md
basic_optimization/: nonlinear_least_squares_problem.ipynb  nonlinear_optimization.ipynb
ceres_solver_test/curve_fitting/: CMakeLists.txt
ceres_solver_test/curve_fitting/src/: main.cpp
ceres_solver_test/hello_world/: CMakeLists.txt
ceres_solver_test/hello_world/src/: main.cpp
ceres_solver_test/pose_graph_2d/src/: main.cpp
ceres_solver_test/powell_function/: CMakeLists.txt
ceres_solver_test/powell_function/src/: main.cpp
ceres_solver_test/robust_curve_fitting/: CMakeLists.txt
ceres_solver_test/robust_curve_fitting/src/: main.cpp
